force-app/main/default/objects/User_Guide__kav/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <label>Instructions</label>
    <type>Html</type>
    <description>Detailed user instructions and procedures</description>
</CustomField>