force-app/main/default/objects/User_Guide__kav/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Html</type>
    <description>Purpose and scope of this user guide</description>
</CustomField>