force-app/main/default/objects/User_Guide__kav/fields/Screenshots__c.field-meta.xml
<CustomField>
    <fullName>Screenshots__c</fullName>
    <label>Screenshots</label>
    <type>Html</type>
    <description>Screenshots and visual aids for user guidance</description>
</CustomField>