force-app/main/default/objects/User_Guide__kav/fields/Troubleshooting__c.field-meta.xml
<CustomField>
    <fullName>Troubleshooting__c</fullName>
    <label>Troubleshooting</label>
    <type>Html</type>
    <description>Common issues and troubleshooting steps</description>
</CustomField>